// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly applies the theme context className 1`] = `
<ThemeContextProvider
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  theme={
    Object {
      "className": "orion-fusion-theme",
    }
  }
>
  <InjectIntl(TimeInput)
    name="time-input"
  >
    <TimeInput
      atMaxDate={false}
      atMinDate={false}
      disabled={false}
      hourAttributes={Object {}}
      inputAttributes={
        Object {
          "disabled": false,
          "isInvalid": false,
          "required": false,
        }
      }
      intl={
        Object {
          "defaultFormats": Object {},
          "defaultLocale": "en",
          "formatDate": [Function],
          "formatHTMLMessage": [Function],
          "formatMessage": [Function],
          "formatNumber": [Function],
          "formatPlural": [Function],
          "formatRelative": [Function],
          "formatTime": [Function],
          "formats": Object {},
          "formatters": Object {
            "getDateTimeFormat": [Function],
            "getMessageFormat": [Function],
            "getNumberFormat": [Function],
            "getPluralFormat": [Function],
            "getRelativeFormat": [Function],
          },
          "locale": "en",
          "messages": null,
          "now": [Function],
          "onError": [Function],
          "textComponent": "span",
          "timeZone": null,
        }
      }
      isIncomplete={false}
      isInvalid={false}
      isInvalidMeridiem={false}
      minuteAttributes={Object {}}
      name="time-input"
      onBlur={null}
      onChange={null}
      required={false}
      secondAttributes={Object {}}
      showSeconds={false}
      variant="24-hour"
    >
      <div
        className="time-input-container orion-fusion-theme"
      >
        <div
          aria-label="Terra.timeInput.a11yLabelDefault"
          className="time-input"
          role="group"
        >
          <AccessibleValue
            readThis="Terra.timeInput.labeledTextValue"
          >
            <VisuallyHiddenText
              aria-hidden={true}
              text="Terra.timeInput.labeledTextValue"
            >
              <span
                aria-hidden={true}
                className="visually-hidden-text"
              >
                Terra.timeInput.labeledTextValue
              </span>
            </VisuallyHiddenText>
          </AccessibleValue>
          <input
            name="time-input"
            type="hidden"
            value=""
          />
          <AccessibleInput
            ariaDescribedBy={null}
            className="time-input-hour"
            description="Terra.timeInput.hourDescriptionTwentyFour, Terra.timePicker.hotKey"
            disabled={false}
            isInvalid={false}
            label="Terra.timeInput.hourLabel"
            maxLength="2"
            name="terra-time-hour-time-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            pattern="\\\\d*"
            refCallback={[Function]}
            required={false}
            showIsInvalid={false}
            size="2"
            type="text"
            value=""
          >
            <Input
              aria-describedby="00000000-0000-0000-0000-000000000000-description"
              aria-disabled={false}
              aria-invalid={false}
              aria-label=" Terra.timeInput.hourLabel"
              className="time-input-hour"
              disabled={false}
              isIncomplete={false}
              isInvalid={false}
              maxLength="2"
              name="terra-time-hour-time-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              pattern="\\\\d*"
              refCallback={[Function]}
              required={false}
              size="2"
              type="text"
              value=""
            >
              <input
                aria-describedby="00000000-0000-0000-0000-000000000000-description"
                aria-disabled={false}
                aria-invalid={false}
                aria-label=" Terra.timeInput.hourLabel"
                className="form-input orion-fusion-theme time-input-hour"
                disabled={false}
                maxLength="2"
                name="terra-time-hour-time-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                pattern="\\\\d*"
                required={false}
                size="2"
                type="text"
                value=""
              />
            </Input>
            <VisuallyHiddenText
              aria-live="off"
              id="00000000-0000-0000-0000-000000000000-description"
              text="Terra.timeInput.hourDescriptionTwentyFour, Terra.timePicker.hotKey"
            >
              <span
                aria-live="off"
                className="visually-hidden-text"
                id="00000000-0000-0000-0000-000000000000-description"
              >
                Terra.timeInput.hourDescriptionTwentyFour, Terra.timePicker.hotKey
              </span>
            </VisuallyHiddenText>
          </AccessibleInput>
          <InjectIntl(TimeSpacer)
            className="time-spacer"
          >
            <TimeSpacer
              className="time-spacer"
              intl={
                Object {
                  "defaultFormats": Object {},
                  "defaultLocale": "en",
                  "formatDate": [Function],
                  "formatHTMLMessage": [Function],
                  "formatMessage": [Function],
                  "formatNumber": [Function],
                  "formatPlural": [Function],
                  "formatRelative": [Function],
                  "formatTime": [Function],
                  "formats": Object {},
                  "formatters": Object {
                    "getDateTimeFormat": [Function],
                    "getMessageFormat": [Function],
                    "getNumberFormat": [Function],
                    "getPluralFormat": [Function],
                    "getRelativeFormat": [Function],
                  },
                  "locale": "en",
                  "messages": null,
                  "now": [Function],
                  "onError": [Function],
                  "textComponent": "span",
                  "timeZone": null,
                }
              }
            >
              <span
                aria-hidden={true}
                className="time-spacer"
              >
                Terra.timeInput.timeSpacer
              </span>
            </TimeSpacer>
          </InjectIntl(TimeSpacer)>
          <AccessibleInput
            ariaDescribedBy={null}
            className="time-input-minute"
            description="Terra.timeInput.descriptionMinute, Terra.timePicker.hotKey"
            disabled={false}
            isInvalid={false}
            label="Terra.timeInput.minutes"
            maxLength="2"
            name="terra-time-minute-time-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            pattern="\\\\d*"
            refCallback={[Function]}
            required={false}
            showIsInvalid={false}
            size="2"
            type="text"
            value=""
          >
            <Input
              aria-describedby="00000000-0000-0000-0000-000000000000-description"
              aria-disabled={false}
              aria-invalid={false}
              aria-label=" Terra.timeInput.minutes"
              className="time-input-minute"
              disabled={false}
              isIncomplete={false}
              isInvalid={false}
              maxLength="2"
              name="terra-time-minute-time-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              pattern="\\\\d*"
              refCallback={[Function]}
              required={false}
              size="2"
              type="text"
              value=""
            >
              <input
                aria-describedby="00000000-0000-0000-0000-000000000000-description"
                aria-disabled={false}
                aria-invalid={false}
                aria-label=" Terra.timeInput.minutes"
                className="form-input orion-fusion-theme time-input-minute"
                disabled={false}
                maxLength="2"
                name="terra-time-minute-time-input"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                pattern="\\\\d*"
                required={false}
                size="2"
                type="text"
                value=""
              />
            </Input>
            <VisuallyHiddenText
              aria-live="off"
              id="00000000-0000-0000-0000-000000000000-description"
              text="Terra.timeInput.descriptionMinute, Terra.timePicker.hotKey"
            >
              <span
                aria-live="off"
                className="visually-hidden-text"
                id="00000000-0000-0000-0000-000000000000-description"
              >
                Terra.timeInput.descriptionMinute, Terra.timePicker.hotKey
              </span>
            </VisuallyHiddenText>
          </AccessibleInput>
        </div>
        <div
          aria-hidden={true}
          className="format-text"
        >
          Terra.timeInput.maskHourMinute
        </div>
        <VisuallyHiddenText
          aria-atomic="true"
          aria-live="assertive"
          aria-relevant="all"
          refCallback={[Function]}
        >
          <span
            aria-atomic="true"
            aria-live="assertive"
            aria-relevant="all"
            className="visually-hidden-text"
          />
        </VisuallyHiddenText>
      </div>
    </TimeInput>
  </InjectIntl(TimeInput)>
</ThemeContextProvider>
`;

exports[`should ignore invalid times properly 1`] = `
<div
  className="time-input-container"
>
  <div
    aria-label="Terra.timeInput.a11yLabelDefault"
    className="time-input"
    role="group"
  >
    <AccessibleValue
      readThis="Terra.timeInput.labeledTextValue"
    />
    <input
      name="time-input"
      type="hidden"
      value=""
    />
    <AccessibleInput
      ariaDescribedBy={null}
      className="time-input-hour"
      description="Terra.timeInput.hourDescriptionTwentyFour, Terra.timePicker.hotKey"
      disabled={false}
      isInvalid={false}
      label="Terra.timeInput.hourLabel"
      maxLength="2"
      name="terra-time-hour-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      showIsInvalid={false}
      size="2"
      type="text"
      value=""
    />
    <InjectIntl(TimeSpacer)
      className="time-spacer"
    />
    <AccessibleInput
      ariaDescribedBy={null}
      className="time-input-minute"
      description="Terra.timeInput.descriptionMinute, Terra.timePicker.hotKey"
      disabled={false}
      isInvalid={false}
      label="Terra.timeInput.minutes"
      maxLength="2"
      name="terra-time-minute-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      showIsInvalid={false}
      size="2"
      type="text"
      value=""
    />
  </div>
  <div
    aria-hidden={true}
    className="format-text"
  >
    Terra.timeInput.maskHourMinute
  </div>
  <VisuallyHiddenText
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="all"
    refCallback={[Function]}
  />
</div>
`;

exports[`should ignore invalid times with seconds properly 1`] = `
<div
  className="time-input-container"
>
  <div
    aria-label="Terra.timeInput.a11yLabelDefault"
    className="time-input"
    role="group"
  >
    <AccessibleValue
      readThis="Terra.timeInput.labeledTextValue"
    />
    <input
      name="time-input"
      type="hidden"
      value=""
    />
    <AccessibleInput
      ariaDescribedBy={null}
      className="time-input-hour with-second"
      description="Terra.timeInput.hourDescriptionTwentyFour, Terra.timePicker.hotKey"
      disabled={false}
      isInvalid={false}
      label="Terra.timeInput.hourLabel"
      maxLength="2"
      name="terra-time-hour-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      showIsInvalid={false}
      size="2"
      type="text"
      value=""
    />
    <InjectIntl(TimeSpacer)
      className="time-spacer"
    />
    <AccessibleInput
      ariaDescribedBy={null}
      className="time-input-minute with-second"
      description="Terra.timeInput.descriptionMinute, Terra.timePicker.hotKey"
      disabled={false}
      isInvalid={false}
      label="Terra.timeInput.minutes"
      maxLength="2"
      name="terra-time-minute-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      showIsInvalid={false}
      size="2"
      type="text"
      value=""
    />
    <InjectIntl(TimeSpacer)
      className="time-spacer"
    />
    <AccessibleInput
      ariaDescribedBy={null}
      className="time-input-second"
      description="Terra.timeInput.descriptionSecond, Terra.timePicker.hotKey"
      disabled={false}
      isInvalid={false}
      label="Terra.timeInput.seconds"
      maxLength="2"
      name="terra-time-second-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      showIsInvalid={false}
      size="2"
      type="text"
      value=""
    />
  </div>
  <div
    aria-hidden={true}
    className="format-text"
  >
    Terra.timeInput.maskHourMinuteSecond
  </div>
  <VisuallyHiddenText
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="all"
    refCallback={[Function]}
  />
</div>
`;

exports[`should not have duplicate ids on the page when multiple date pickers are initialized 1`] = `
<div
  intl="[object Object]"
>
  <div
    class="time-input-container"
  >
    <div
      aria-label="Terra.timeInput.a11yLabelDefault"
      class="time-input"
      role="group"
    >
      <span
        aria-hidden="true"
        class="visually-hidden-text"
      >
        Terra.timeInput.labeledTextValue
      </span>
      <input
        name="time-input"
        type="hidden"
        value=""
      />
      <input
        aria-describedby="00000000-0000-0000-0000-000000000000-description"
        aria-disabled="false"
        aria-invalid="false"
        aria-label=" Terra.timeInput.hourLabel"
        class="form-input time-input-hour"
        maxlength="2"
        name="terra-time-hour-time-input"
        pattern="\\\\d*"
        size="2"
        type="text"
        value=""
      />
      <span
        aria-live="off"
        class="visually-hidden-text"
        id="00000000-0000-0000-0000-000000000000-description"
      >
        Terra.timeInput.hourDescriptionTwelve, Terra.timePicker.hotKey
      </span>
      <span
        aria-hidden="true"
        class="time-spacer"
      >
        Terra.timeInput.timeSpacer
      </span>
      <input
        aria-describedby="00000000-0000-0000-0000-000000000000-description"
        aria-disabled="false"
        aria-invalid="false"
        aria-label=" Terra.timeInput.minutes"
        class="form-input time-input-minute"
        maxlength="2"
        name="terra-time-minute-time-input"
        pattern="\\\\d*"
        size="2"
        type="text"
        value=""
      />
      <span
        aria-live="off"
        class="visually-hidden-text"
        id="00000000-0000-0000-0000-000000000000-description"
      >
        Terra.timeInput.descriptionMinute, Terra.timePicker.hotKey
      </span>
    </div>
    <div
      class="button-group meridiem-button-group"
      role="radiogroup"
    >
      <button
        aria-checked="true"
        aria-disabled="false"
        class="button neutral button-group-button is-selected meridiem-button"
        data-terra-button-group-button="true"
        role="radio"
        tabindex="0"
        type="button"
      >
        <span
          class="button-label-win text-only"
        >
          <span
            class=""
          >
            Terra.timeInput.am
          </span>
        </span>
      </button>
      <button
        aria-checked="false"
        aria-disabled="false"
        class="button neutral button-group-button meridiem-button"
        data-terra-button-group-button="true"
        role="radio"
        tabindex="-1"
        type="button"
      >
        <span
          class="button-label-win text-only"
        >
          <span
            class=""
          >
            Terra.timeInput.pm
          </span>
        </span>
      </button>
    </div>
    <div
      aria-hidden="true"
      class="format-text"
    >
      Terra.timeInput.maskHourMinute
    </div>
    <span
      aria-atomic="true"
      aria-live="assertive"
      aria-relevant="all"
      class="visually-hidden-text"
    />
  </div>
  <div
    class="time-input-container"
  >
    <div
      aria-label="Terra.timeInput.a11yLabelDefault"
      class="time-input"
      role="group"
    >
      <span
        aria-hidden="true"
        class="visually-hidden-text"
      >
        Terra.timeInput.labeledTextValue
      </span>
      <input
        name="time-input-2"
        type="hidden"
        value=""
      />
      <input
        aria-describedby="00000000-0000-0000-0000-000000000000-description"
        aria-disabled="false"
        aria-invalid="false"
        aria-label=" Terra.timeInput.hourLabel"
        class="form-input time-input-hour"
        maxlength="2"
        name="terra-time-hour-time-input-2"
        pattern="\\\\d*"
        size="2"
        type="text"
        value=""
      />
      <span
        aria-live="off"
        class="visually-hidden-text"
        id="00000000-0000-0000-0000-000000000000-description"
      >
        Terra.timeInput.hourDescriptionTwelve, Terra.timePicker.hotKey
      </span>
      <span
        aria-hidden="true"
        class="time-spacer"
      >
        Terra.timeInput.timeSpacer
      </span>
      <input
        aria-describedby="00000000-0000-0000-0000-000000000000-description"
        aria-disabled="false"
        aria-invalid="false"
        aria-label=" Terra.timeInput.minutes"
        class="form-input time-input-minute"
        maxlength="2"
        name="terra-time-minute-time-input-2"
        pattern="\\\\d*"
        size="2"
        type="text"
        value=""
      />
      <span
        aria-live="off"
        class="visually-hidden-text"
        id="00000000-0000-0000-0000-000000000000-description"
      >
        Terra.timeInput.descriptionMinute, Terra.timePicker.hotKey
      </span>
    </div>
    <div
      class="button-group meridiem-button-group"
      role="radiogroup"
    >
      <button
        aria-checked="true"
        aria-disabled="false"
        class="button neutral button-group-button is-selected meridiem-button"
        data-terra-button-group-button="true"
        role="radio"
        tabindex="0"
        type="button"
      >
        <span
          class="button-label-win text-only"
        >
          <span
            class=""
          >
            Terra.timeInput.am
          </span>
        </span>
      </button>
      <button
        aria-checked="false"
        aria-disabled="false"
        class="button neutral button-group-button meridiem-button"
        data-terra-button-group-button="true"
        role="radio"
        tabindex="-1"
        type="button"
      >
        <span
          class="button-label-win text-only"
        >
          <span
            class=""
          >
            Terra.timeInput.pm
          </span>
        </span>
      </button>
    </div>
    <div
      aria-hidden="true"
      class="format-text"
    >
      Terra.timeInput.maskHourMinute
    </div>
    <span
      aria-atomic="true"
      aria-live="assertive"
      aria-relevant="all"
      class="visually-hidden-text"
    />
  </div>
  <div
    class="time-input-container"
  >
    <div
      aria-label="Terra.timeInput.a11yLabelDefault"
      class="time-input"
      role="group"
    >
      <span
        aria-hidden="true"
        class="visually-hidden-text"
      >
        Terra.timeInput.labeledTextValue
      </span>
      <input
        name="time-input-3"
        type="hidden"
        value=""
      />
      <input
        aria-describedby="00000000-0000-0000-0000-000000000000-description"
        aria-disabled="false"
        aria-invalid="false"
        aria-label=" Terra.timeInput.hourLabel"
        class="form-input time-input-hour"
        maxlength="2"
        name="terra-time-hour-time-input-3"
        pattern="\\\\d*"
        size="2"
        type="text"
        value=""
      />
      <span
        aria-live="off"
        class="visually-hidden-text"
        id="00000000-0000-0000-0000-000000000000-description"
      >
        Terra.timeInput.hourDescriptionTwelve, Terra.timePicker.hotKey
      </span>
      <span
        aria-hidden="true"
        class="time-spacer"
      >
        Terra.timeInput.timeSpacer
      </span>
      <input
        aria-describedby="00000000-0000-0000-0000-000000000000-description"
        aria-disabled="false"
        aria-invalid="false"
        aria-label=" Terra.timeInput.minutes"
        class="form-input time-input-minute"
        maxlength="2"
        name="terra-time-minute-time-input-3"
        pattern="\\\\d*"
        size="2"
        type="text"
        value=""
      />
      <span
        aria-live="off"
        class="visually-hidden-text"
        id="00000000-0000-0000-0000-000000000000-description"
      >
        Terra.timeInput.descriptionMinute, Terra.timePicker.hotKey
      </span>
    </div>
    <div
      class="button-group meridiem-button-group"
      role="radiogroup"
    >
      <button
        aria-checked="true"
        aria-disabled="false"
        class="button neutral button-group-button is-selected meridiem-button"
        data-terra-button-group-button="true"
        role="radio"
        tabindex="0"
        type="button"
      >
        <span
          class="button-label-win text-only"
        >
          <span
            class=""
          >
            Terra.timeInput.am
          </span>
        </span>
      </button>
      <button
        aria-checked="false"
        aria-disabled="false"
        class="button neutral button-group-button meridiem-button"
        data-terra-button-group-button="true"
        role="radio"
        tabindex="-1"
        type="button"
      >
        <span
          class="button-label-win text-only"
        >
          <span
            class=""
          >
            Terra.timeInput.pm
          </span>
        </span>
      </button>
    </div>
    <div
      aria-hidden="true"
      class="format-text"
    >
      Terra.timeInput.maskHourMinute
    </div>
    <span
      aria-atomic="true"
      aria-live="assertive"
      aria-relevant="all"
      class="visually-hidden-text"
    />
  </div>
</div>
`;

exports[`should pass in refCallback as the ref prop of the hour input element 1`] = `
<TimeInput
  atMaxDate={false}
  atMinDate={false}
  disabled={false}
  hourAttributes={Object {}}
  inputAttributes={
    Object {
      "disabled": false,
      "isInvalid": false,
      "required": false,
    }
  }
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isIncomplete={false}
  isInvalid={false}
  isInvalidMeridiem={false}
  minuteAttributes={Object {}}
  name="time-input"
  onBlur={null}
  onChange={null}
  refCallback={
    [MockFunction] {
      "calls": Array [
        Array [
          <input
            aria-describedby="00000000-0000-0000-0000-000000000000-description"
            aria-disabled="false"
            aria-invalid="false"
            aria-label=" Terra.timeInput.hourLabel"
            class="form-input time-input-hour"
            maxlength="2"
            name="terra-time-hour-time-input"
            pattern="\\\\d*"
            size="2"
            type="text"
            value=""
          />,
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  required={false}
  secondAttributes={Object {}}
  showSeconds={false}
  variant="24-hour"
>
  <div
    className="time-input-container"
  >
    <div
      aria-label="Terra.timeInput.a11yLabelDefault"
      className="time-input"
      role="group"
    >
      <AccessibleValue
        readThis="Terra.timeInput.labeledTextValue"
      >
        <VisuallyHiddenText
          aria-hidden={true}
          text="Terra.timeInput.labeledTextValue"
        >
          <span
            aria-hidden={true}
            className="visually-hidden-text"
          >
            Terra.timeInput.labeledTextValue
          </span>
        </VisuallyHiddenText>
      </AccessibleValue>
      <input
        name="time-input"
        type="hidden"
        value=""
      />
      <AccessibleInput
        ariaDescribedBy={null}
        className="time-input-hour"
        description="Terra.timeInput.hourDescriptionTwentyFour, Terra.timePicker.hotKey"
        disabled={false}
        isInvalid={false}
        label="Terra.timeInput.hourLabel"
        maxLength="2"
        name="terra-time-hour-time-input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        pattern="\\\\d*"
        refCallback={[Function]}
        required={false}
        showIsInvalid={false}
        size="2"
        type="text"
        value=""
      >
        <Input
          aria-describedby="00000000-0000-0000-0000-000000000000-description"
          aria-disabled={false}
          aria-invalid={false}
          aria-label=" Terra.timeInput.hourLabel"
          className="time-input-hour"
          disabled={false}
          isIncomplete={false}
          isInvalid={false}
          maxLength="2"
          name="terra-time-hour-time-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          pattern="\\\\d*"
          refCallback={[Function]}
          required={false}
          size="2"
          type="text"
          value=""
        >
          <input
            aria-describedby="00000000-0000-0000-0000-000000000000-description"
            aria-disabled={false}
            aria-invalid={false}
            aria-label=" Terra.timeInput.hourLabel"
            className="form-input time-input-hour"
            disabled={false}
            maxLength="2"
            name="terra-time-hour-time-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            pattern="\\\\d*"
            required={false}
            size="2"
            type="text"
            value=""
          />
        </Input>
        <VisuallyHiddenText
          aria-live="off"
          id="00000000-0000-0000-0000-000000000000-description"
          text="Terra.timeInput.hourDescriptionTwentyFour, Terra.timePicker.hotKey"
        >
          <span
            aria-live="off"
            className="visually-hidden-text"
            id="00000000-0000-0000-0000-000000000000-description"
          >
            Terra.timeInput.hourDescriptionTwentyFour, Terra.timePicker.hotKey
          </span>
        </VisuallyHiddenText>
      </AccessibleInput>
      <InjectIntl(TimeSpacer)
        className="time-spacer"
      >
        <TimeSpacer
          className="time-spacer"
          intl={
            Object {
              "defaultFormats": Object {},
              "defaultLocale": "en",
              "formatDate": [Function],
              "formatHTMLMessage": [Function],
              "formatMessage": [Function],
              "formatNumber": [Function],
              "formatPlural": [Function],
              "formatRelative": [Function],
              "formatTime": [Function],
              "formats": Object {},
              "formatters": Object {
                "getDateTimeFormat": [Function],
                "getMessageFormat": [Function],
                "getNumberFormat": [Function],
                "getPluralFormat": [Function],
                "getRelativeFormat": [Function],
              },
              "locale": "en",
              "messages": null,
              "now": [Function],
              "onError": [Function],
              "textComponent": "span",
              "timeZone": null,
            }
          }
        >
          <span
            aria-hidden={true}
            className="time-spacer"
          >
            Terra.timeInput.timeSpacer
          </span>
        </TimeSpacer>
      </InjectIntl(TimeSpacer)>
      <AccessibleInput
        ariaDescribedBy={null}
        className="time-input-minute"
        description="Terra.timeInput.descriptionMinute, Terra.timePicker.hotKey"
        disabled={false}
        isInvalid={false}
        label="Terra.timeInput.minutes"
        maxLength="2"
        name="terra-time-minute-time-input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        pattern="\\\\d*"
        refCallback={[Function]}
        required={false}
        showIsInvalid={false}
        size="2"
        type="text"
        value=""
      >
        <Input
          aria-describedby="00000000-0000-0000-0000-000000000000-description"
          aria-disabled={false}
          aria-invalid={false}
          aria-label=" Terra.timeInput.minutes"
          className="time-input-minute"
          disabled={false}
          isIncomplete={false}
          isInvalid={false}
          maxLength="2"
          name="terra-time-minute-time-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          pattern="\\\\d*"
          refCallback={[Function]}
          required={false}
          size="2"
          type="text"
          value=""
        >
          <input
            aria-describedby="00000000-0000-0000-0000-000000000000-description"
            aria-disabled={false}
            aria-invalid={false}
            aria-label=" Terra.timeInput.minutes"
            className="form-input time-input-minute"
            disabled={false}
            maxLength="2"
            name="terra-time-minute-time-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            pattern="\\\\d*"
            required={false}
            size="2"
            type="text"
            value=""
          />
        </Input>
        <VisuallyHiddenText
          aria-live="off"
          id="00000000-0000-0000-0000-000000000000-description"
          text="Terra.timeInput.descriptionMinute, Terra.timePicker.hotKey"
        >
          <span
            aria-live="off"
            className="visually-hidden-text"
            id="00000000-0000-0000-0000-000000000000-description"
          >
            Terra.timeInput.descriptionMinute, Terra.timePicker.hotKey
          </span>
        </VisuallyHiddenText>
      </AccessibleInput>
    </div>
    <div
      aria-hidden={true}
      className="format-text"
    >
      Terra.timeInput.maskHourMinute
    </div>
    <VisuallyHiddenText
      aria-atomic="true"
      aria-live="assertive"
      aria-relevant="all"
      refCallback={[Function]}
    >
      <span
        aria-atomic="true"
        aria-live="assertive"
        aria-relevant="all"
        className="visually-hidden-text"
      />
    </VisuallyHiddenText>
  </div>
</TimeInput>
`;

exports[`should render a 12 hour clock time input with seconds input 1`] = `
<div
  className="time-input-container"
>
  <div
    aria-label="Terra.timeInput.a11yLabelDefault"
    className="time-input"
    role="group"
  >
    <AccessibleValue
      readThis="Terra.timeInput.labeledTextValue"
    />
    <input
      name="time-input"
      type="hidden"
      value=""
    />
    <AccessibleInput
      ariaDescribedBy={null}
      className="time-input-hour with-second"
      description="Terra.timeInput.hourDescriptionTwelve, Terra.timePicker.hotKey"
      disabled={false}
      isInvalid={false}
      label="Terra.timeInput.hourLabel"
      maxLength="2"
      name="terra-time-hour-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      showIsInvalid={false}
      size="2"
      type="text"
      value=""
    />
    <InjectIntl(TimeSpacer)
      className="time-spacer"
    />
    <AccessibleInput
      ariaDescribedBy={null}
      className="time-input-minute with-second"
      description="Terra.timeInput.descriptionMinute, Terra.timePicker.hotKey"
      disabled={false}
      isInvalid={false}
      label="Terra.timeInput.minutes"
      maxLength="2"
      name="terra-time-minute-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      showIsInvalid={false}
      size="2"
      type="text"
      value=""
    />
    <InjectIntl(TimeSpacer)
      className="time-spacer"
    />
    <AccessibleInput
      ariaDescribedBy={null}
      className="time-input-second"
      description="Terra.timeInput.descriptionSecond, Terra.timePicker.hotKey"
      disabled={false}
      isInvalid={false}
      label="Terra.timeInput.seconds"
      maxLength="2"
      name="terra-time-second-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      showIsInvalid={false}
      size="2"
      type="text"
      value=""
    />
  </div>
  <ButtonGroup
    className="meridiem-button-group"
    isBlock={false}
    isMultiSelect={false}
    onChange={[Function]}
    selectedKeys={
      Array [
        "Terra.timeInput.am",
      ]
    }
  >
    <ButtonGroupButton
      className="meridiem-button"
      isDisabled={false}
      key="Terra.timeInput.am"
      onBlur={[Function]}
      onFocus={[Function]}
      text="Terra.timeInput.am"
    />
    <ButtonGroupButton
      className="meridiem-button"
      isDisabled={false}
      key="Terra.timeInput.pm"
      onBlur={[Function]}
      onFocus={[Function]}
      text="Terra.timeInput.pm"
    />
  </ButtonGroup>
  <div
    aria-hidden={true}
    className="format-text"
  >
    Terra.timeInput.maskHourMinuteSecond
  </div>
  <VisuallyHiddenText
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="all"
    refCallback={[Function]}
  />
</div>
`;

exports[`should render a 12 hour timepicker meridiem with buttons and seconds input when viewed on a mobile device 1`] = `
<div
  class="time-input-container"
>
  <div
    aria-label="Terra.timeInput.a11yLabelDefault"
    class="time-input"
    role="group"
  >
    <span
      aria-hidden="true"
      class="visually-hidden-text"
    >
      Terra.timeInput.labeledTextValue
    </span>
    <input
      name="time-input"
      type="hidden"
      value=""
    />
    <input
      aria-describedby="00000000-0000-0000-0000-000000000000-description"
      aria-disabled="false"
      aria-invalid="false"
      aria-label=" Terra.timeInput.hourLabel"
      class="form-input time-input-hour with-second"
      maxlength="2"
      name="terra-time-hour-time-input"
      pattern="\\\\d*"
      size="2"
      type="text"
      value=""
    />
    <span
      aria-live="off"
      class="visually-hidden-text"
      id="00000000-0000-0000-0000-000000000000-description"
    >
      Terra.timeInput.hourDescriptionTwelve, Terra.timePicker.hotKey
    </span>
    <span
      aria-hidden="true"
      class="time-spacer"
    >
      Terra.timeInput.timeSpacer
    </span>
    <input
      aria-describedby="00000000-0000-0000-0000-000000000000-description"
      aria-disabled="false"
      aria-invalid="false"
      aria-label=" Terra.timeInput.minutes"
      class="form-input time-input-minute with-second"
      maxlength="2"
      name="terra-time-minute-time-input"
      pattern="\\\\d*"
      size="2"
      type="text"
      value=""
    />
    <span
      aria-live="off"
      class="visually-hidden-text"
      id="00000000-0000-0000-0000-000000000000-description"
    >
      Terra.timeInput.descriptionMinute, Terra.timePicker.hotKey
    </span>
    <span
      aria-hidden="true"
      class="time-spacer"
    >
      Terra.timeInput.timeSpacer
    </span>
    <input
      aria-describedby="00000000-0000-0000-0000-000000000000-description"
      aria-disabled="false"
      aria-invalid="false"
      aria-label=" Terra.timeInput.seconds"
      class="form-input time-input-second"
      maxlength="2"
      name="terra-time-second-time-input"
      pattern="\\\\d*"
      size="2"
      type="text"
      value=""
    />
    <span
      aria-live="off"
      class="visually-hidden-text"
      id="00000000-0000-0000-0000-000000000000-description"
    >
      Terra.timeInput.descriptionSecond, Terra.timePicker.hotKey
    </span>
  </div>
  <div
    class="button-group meridiem-button-group"
    role="radiogroup"
  >
    <button
      aria-checked="true"
      aria-disabled="false"
      class="button neutral button-group-button is-selected meridiem-button"
      data-terra-button-group-button="true"
      role="radio"
      tabindex="0"
      type="button"
    >
      <span
        class="button-label-win text-only"
      >
        <span
          class=""
        >
          Terra.timeInput.am
        </span>
      </span>
    </button>
    <button
      aria-checked="false"
      aria-disabled="false"
      class="button neutral button-group-button meridiem-button"
      data-terra-button-group-button="true"
      role="radio"
      tabindex="-1"
      type="button"
    >
      <span
        class="button-label-win text-only"
      >
        <span
          class=""
        >
          Terra.timeInput.pm
        </span>
      </span>
    </button>
  </div>
  <div
    aria-hidden="true"
    class="format-text"
  >
    Terra.timeInput.maskHourMinuteSecond
  </div>
  <span
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="all"
    class="visually-hidden-text"
  />
</div>
`;

exports[`should render a 12 hour timepicker meridiem with buttons when viewed on a mobile device 1`] = `
<div
  class="time-input-container"
>
  <div
    aria-label="Terra.timeInput.a11yLabelDefault"
    class="time-input"
    role="group"
  >
    <span
      aria-hidden="true"
      class="visually-hidden-text"
    >
      Terra.timeInput.labeledTextValue
    </span>
    <input
      name="time-input"
      type="hidden"
      value=""
    />
    <input
      aria-describedby="00000000-0000-0000-0000-000000000000-description"
      aria-disabled="false"
      aria-invalid="false"
      aria-label=" Terra.timeInput.hourLabel"
      class="form-input time-input-hour"
      maxlength="2"
      name="terra-time-hour-time-input"
      pattern="\\\\d*"
      size="2"
      type="text"
      value=""
    />
    <span
      aria-live="off"
      class="visually-hidden-text"
      id="00000000-0000-0000-0000-000000000000-description"
    >
      Terra.timeInput.hourDescriptionTwelve, Terra.timePicker.hotKey
    </span>
    <span
      aria-hidden="true"
      class="time-spacer"
    >
      Terra.timeInput.timeSpacer
    </span>
    <input
      aria-describedby="00000000-0000-0000-0000-000000000000-description"
      aria-disabled="false"
      aria-invalid="false"
      aria-label=" Terra.timeInput.minutes"
      class="form-input time-input-minute"
      maxlength="2"
      name="terra-time-minute-time-input"
      pattern="\\\\d*"
      size="2"
      type="text"
      value=""
    />
    <span
      aria-live="off"
      class="visually-hidden-text"
      id="00000000-0000-0000-0000-000000000000-description"
    >
      Terra.timeInput.descriptionMinute, Terra.timePicker.hotKey
    </span>
  </div>
  <div
    class="button-group meridiem-button-group"
    role="radiogroup"
  >
    <button
      aria-checked="true"
      aria-disabled="false"
      class="button neutral button-group-button is-selected meridiem-button"
      data-terra-button-group-button="true"
      role="radio"
      tabindex="0"
      type="button"
    >
      <span
        class="button-label-win text-only"
      >
        <span
          class=""
        >
          Terra.timeInput.am
        </span>
      </span>
    </button>
    <button
      aria-checked="false"
      aria-disabled="false"
      class="button neutral button-group-button meridiem-button"
      data-terra-button-group-button="true"
      role="radio"
      tabindex="-1"
      type="button"
    >
      <span
        class="button-label-win text-only"
      >
        <span
          class=""
        >
          Terra.timeInput.pm
        </span>
      </span>
    </button>
  </div>
  <div
    aria-hidden="true"
    class="format-text"
  >
    Terra.timeInput.maskHourMinute
  </div>
  <span
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="all"
    class="visually-hidden-text"
  />
</div>
`;

exports[`should render a 24 hour timepicker properly on mobile devices 1`] = `
<div
  class="time-input-container"
>
  <div
    aria-label="Terra.timeInput.a11yLabelDefault"
    class="time-input"
    role="group"
  >
    <span
      aria-hidden="true"
      class="visually-hidden-text"
    >
      Terra.timeInput.labeledTextValue
    </span>
    <input
      name="time-input"
      type="hidden"
      value=""
    />
    <input
      aria-describedby="00000000-0000-0000-0000-000000000000-description"
      aria-disabled="false"
      aria-invalid="false"
      aria-label=" Terra.timeInput.hourLabel"
      class="form-input time-input-hour"
      maxlength="2"
      name="terra-time-hour-time-input"
      pattern="\\\\d*"
      size="2"
      type="text"
      value=""
    />
    <span
      aria-live="off"
      class="visually-hidden-text"
      id="00000000-0000-0000-0000-000000000000-description"
    >
      Terra.timeInput.hourDescriptionTwentyFour, Terra.timePicker.hotKey
    </span>
    <span
      aria-hidden="true"
      class="time-spacer"
    >
      Terra.timeInput.timeSpacer
    </span>
    <input
      aria-describedby="00000000-0000-0000-0000-000000000000-description"
      aria-disabled="false"
      aria-invalid="false"
      aria-label=" Terra.timeInput.minutes"
      class="form-input time-input-minute"
      maxlength="2"
      name="terra-time-minute-time-input"
      pattern="\\\\d*"
      size="2"
      type="text"
      value=""
    />
    <span
      aria-live="off"
      class="visually-hidden-text"
      id="00000000-0000-0000-0000-000000000000-description"
    >
      Terra.timeInput.descriptionMinute, Terra.timePicker.hotKey
    </span>
  </div>
  <div
    aria-hidden="true"
    class="format-text"
  >
    Terra.timeInput.maskHourMinute
  </div>
  <span
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="all"
    class="visually-hidden-text"
  />
</div>
`;

exports[`should render a 24 hour timepicker with seconds properly on mobile devices 1`] = `
<div
  class="time-input-container"
>
  <div
    aria-label="Terra.timeInput.a11yLabelDefault"
    class="time-input"
    role="group"
  >
    <span
      aria-hidden="true"
      class="visually-hidden-text"
    >
      Terra.timeInput.labeledTextValue
    </span>
    <input
      name="time-input"
      type="hidden"
      value=""
    />
    <input
      aria-describedby="00000000-0000-0000-0000-000000000000-description"
      aria-disabled="false"
      aria-invalid="false"
      aria-label=" Terra.timeInput.hourLabel"
      class="form-input time-input-hour with-second"
      maxlength="2"
      name="terra-time-hour-time-input"
      pattern="\\\\d*"
      size="2"
      type="text"
      value=""
    />
    <span
      aria-live="off"
      class="visually-hidden-text"
      id="00000000-0000-0000-0000-000000000000-description"
    >
      Terra.timeInput.hourDescriptionTwentyFour, Terra.timePicker.hotKey
    </span>
    <span
      aria-hidden="true"
      class="time-spacer"
    >
      Terra.timeInput.timeSpacer
    </span>
    <input
      aria-describedby="00000000-0000-0000-0000-000000000000-description"
      aria-disabled="false"
      aria-invalid="false"
      aria-label=" Terra.timeInput.minutes"
      class="form-input time-input-minute with-second"
      maxlength="2"
      name="terra-time-minute-time-input"
      pattern="\\\\d*"
      size="2"
      type="text"
      value=""
    />
    <span
      aria-live="off"
      class="visually-hidden-text"
      id="00000000-0000-0000-0000-000000000000-description"
    >
      Terra.timeInput.descriptionMinute, Terra.timePicker.hotKey
    </span>
    <span
      aria-hidden="true"
      class="time-spacer"
    >
      Terra.timeInput.timeSpacer
    </span>
    <input
      aria-describedby="00000000-0000-0000-0000-000000000000-description"
      aria-disabled="false"
      aria-invalid="false"
      aria-label=" Terra.timeInput.seconds"
      class="form-input time-input-second"
      maxlength="2"
      name="terra-time-second-time-input"
      pattern="\\\\d*"
      size="2"
      type="text"
      value=""
    />
    <span
      aria-live="off"
      class="visually-hidden-text"
      id="00000000-0000-0000-0000-000000000000-description"
    >
      Terra.timeInput.descriptionSecond, Terra.timePicker.hotKey
    </span>
  </div>
  <div
    aria-hidden="true"
    class="format-text"
  >
    Terra.timeInput.maskHourMinuteSecond
  </div>
  <span
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="all"
    class="visually-hidden-text"
  />
</div>
`;

exports[`should render a default time input 1`] = `
<div
  className="time-input-container"
>
  <div
    aria-label="Terra.timeInput.a11yLabelDefault"
    className="time-input"
    role="group"
  >
    <AccessibleValue
      readThis="Terra.timeInput.labeledTextValue"
    />
    <input
      name="time-input"
      type="hidden"
      value=""
    />
    <AccessibleInput
      ariaDescribedBy={null}
      className="time-input-hour"
      description="Terra.timeInput.hourDescriptionTwentyFour, Terra.timePicker.hotKey"
      disabled={false}
      isInvalid={false}
      label="Terra.timeInput.hourLabel"
      maxLength="2"
      name="terra-time-hour-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      showIsInvalid={false}
      size="2"
      type="text"
      value=""
    />
    <InjectIntl(TimeSpacer)
      className="time-spacer"
    />
    <AccessibleInput
      ariaDescribedBy={null}
      className="time-input-minute"
      description="Terra.timeInput.descriptionMinute, Terra.timePicker.hotKey"
      disabled={false}
      isInvalid={false}
      label="Terra.timeInput.minutes"
      maxLength="2"
      name="terra-time-minute-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      showIsInvalid={false}
      size="2"
      type="text"
      value=""
    />
  </div>
  <div
    aria-hidden={true}
    className="format-text"
  >
    Terra.timeInput.maskHourMinute
  </div>
  <VisuallyHiddenText
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="all"
    refCallback={[Function]}
  />
</div>
`;

exports[`should render a disabled time input 1`] = `
<div
  className="time-input-container"
>
  <div
    aria-label="Terra.timeInput.a11yLabelDefault"
    className="disabled time-input"
    role="group"
  >
    <AccessibleValue
      readThis="Terra.timeInput.labeledTextValue"
    />
    <input
      name="time-input"
      type="hidden"
      value=""
    />
    <AccessibleInput
      ariaDescribedBy={null}
      className="time-input-hour"
      description="Terra.timeInput.hourDescriptionTwentyFour, Terra.timePicker.hotKey"
      disabled={true}
      isInvalid={false}
      label="Terra.timeInput.hourLabel"
      maxLength="2"
      name="terra-time-hour-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      showIsInvalid={false}
      size="2"
      type="text"
      value=""
    />
    <InjectIntl(TimeSpacer)
      className="time-spacer"
    />
    <AccessibleInput
      ariaDescribedBy={null}
      className="time-input-minute"
      description="Terra.timeInput.descriptionMinute, Terra.timePicker.hotKey"
      disabled={true}
      isInvalid={false}
      label="Terra.timeInput.minutes"
      maxLength="2"
      name="terra-time-minute-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      showIsInvalid={false}
      size="2"
      type="text"
      value=""
    />
  </div>
  <div
    aria-hidden={true}
    className="format-text"
  >
    Terra.timeInput.maskHourMinute
  </div>
  <VisuallyHiddenText
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="all"
    refCallback={[Function]}
  />
</div>
`;

exports[`should render a time input with 12 hour clock set 1`] = `
<div
  className="time-input-container"
>
  <div
    aria-label="Terra.timeInput.a11yLabelDefault"
    className="time-input"
    role="group"
  >
    <AccessibleValue
      readThis="Terra.timeInput.labeledTextValue"
    />
    <input
      name="time-input"
      type="hidden"
      value=""
    />
    <AccessibleInput
      ariaDescribedBy={null}
      className="time-input-hour"
      description="Terra.timeInput.hourDescriptionTwelve, Terra.timePicker.hotKey"
      disabled={false}
      isInvalid={false}
      label="Terra.timeInput.hourLabel"
      maxLength="2"
      name="terra-time-hour-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      showIsInvalid={false}
      size="2"
      type="text"
      value=""
    />
    <InjectIntl(TimeSpacer)
      className="time-spacer"
    />
    <AccessibleInput
      ariaDescribedBy={null}
      className="time-input-minute"
      description="Terra.timeInput.descriptionMinute, Terra.timePicker.hotKey"
      disabled={false}
      isInvalid={false}
      label="Terra.timeInput.minutes"
      maxLength="2"
      name="terra-time-minute-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      showIsInvalid={false}
      size="2"
      type="text"
      value=""
    />
  </div>
  <ButtonGroup
    className="meridiem-button-group"
    isBlock={false}
    isMultiSelect={false}
    onChange={[Function]}
    selectedKeys={
      Array [
        "Terra.timeInput.am",
      ]
    }
  >
    <ButtonGroupButton
      className="meridiem-button"
      isDisabled={false}
      key="Terra.timeInput.am"
      onBlur={[Function]}
      onFocus={[Function]}
      text="Terra.timeInput.am"
    />
    <ButtonGroupButton
      className="meridiem-button"
      isDisabled={false}
      key="Terra.timeInput.pm"
      onBlur={[Function]}
      onFocus={[Function]}
      text="Terra.timeInput.pm"
    />
  </ButtonGroup>
  <div
    aria-hidden={true}
    className="format-text"
  >
    Terra.timeInput.maskHourMinute
  </div>
  <VisuallyHiddenText
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="all"
    refCallback={[Function]}
  />
</div>
`;

exports[`should render a time input with a default time 1`] = `
<div
  className="time-input-container"
>
  <div
    aria-label="Terra.timeInput.a11yLabelDefault"
    className="time-input"
    role="group"
  >
    <AccessibleValue
      readThis="Terra.timeInput.labeledTextValue"
      value="Terra.timeInput.textValueTwentyFourHourMinute"
    />
    <input
      name="time-input"
      type="hidden"
      value="T10:45"
    />
    <AccessibleInput
      ariaDescribedBy={null}
      className="time-input-hour"
      description="Terra.timeInput.hourDescriptionTwentyFour, Terra.timePicker.hotKey"
      disabled={false}
      isInvalid={false}
      label="Terra.timeInput.hourLabel"
      maxLength="2"
      name="terra-time-hour-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      showIsInvalid={false}
      size="2"
      type="text"
      value="10"
    />
    <InjectIntl(TimeSpacer)
      className="time-spacer"
    />
    <AccessibleInput
      ariaDescribedBy={null}
      className="time-input-minute"
      description="Terra.timeInput.descriptionMinute, Terra.timePicker.hotKey"
      disabled={false}
      isInvalid={false}
      label="Terra.timeInput.minutes"
      maxLength="2"
      name="terra-time-minute-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      showIsInvalid={false}
      size="2"
      type="text"
      value="45"
    />
  </div>
  <div
    aria-hidden={true}
    className="format-text"
  >
    Terra.timeInput.maskHourMinute
  </div>
  <VisuallyHiddenText
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="all"
    refCallback={[Function]}
  />
</div>
`;

exports[`should render a time input with custom attributes 1`] = `
<div
  className="time-input-container"
>
  <div
    aria-label="Terra.timeInput.a11yLabelDefault"
    className="time-input"
    role="group"
  >
    <AccessibleValue
      readThis="Terra.timeInput.labeledTextValue"
    />
    <input
      name="time-input"
      type="hidden"
      value=""
    />
    <AccessibleInput
      ariaDescribedBy={null}
      className="time-input-hour"
      description="Terra.timeInput.hourDescriptionTwentyFour, Terra.timePicker.hotKey"
      disabled={false}
      id="terra-time-input"
      isInvalid={false}
      label="Terra.timeInput.hourLabel"
      maxLength="2"
      name="terra-time-hour-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      showIsInvalid={false}
      size="2"
      type="text"
      value=""
    />
    <InjectIntl(TimeSpacer)
      className="time-spacer"
    />
    <AccessibleInput
      ariaDescribedBy={null}
      className="time-input-minute"
      description="Terra.timeInput.descriptionMinute, Terra.timePicker.hotKey"
      disabled={false}
      id="terra-time-input"
      isInvalid={false}
      label="Terra.timeInput.minutes"
      maxLength="2"
      name="terra-time-minute-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      showIsInvalid={false}
      size="2"
      type="text"
      value=""
    />
  </div>
  <div
    aria-hidden={true}
    className="format-text"
  >
    Terra.timeInput.maskHourMinute
  </div>
  <VisuallyHiddenText
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="all"
    refCallback={[Function]}
  />
</div>
`;

exports[`should render a time input with onBlur 1`] = `
<div
  className="time-input-container"
>
  <div
    aria-label="Terra.timeInput.a11yLabelDefault"
    className="time-input"
    role="group"
  >
    <AccessibleValue
      readThis="Terra.timeInput.labeledTextValue"
    />
    <input
      name="time-input"
      type="hidden"
      value=""
    />
    <AccessibleInput
      ariaDescribedBy={null}
      className="time-input-hour"
      description="Terra.timeInput.hourDescriptionTwentyFour, Terra.timePicker.hotKey"
      disabled={false}
      isInvalid={false}
      label="Terra.timeInput.hourLabel"
      maxLength="2"
      name="terra-time-hour-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      showIsInvalid={false}
      size="2"
      type="text"
      value=""
    />
    <InjectIntl(TimeSpacer)
      className="time-spacer"
    />
    <AccessibleInput
      ariaDescribedBy={null}
      className="time-input-minute"
      description="Terra.timeInput.descriptionMinute, Terra.timePicker.hotKey"
      disabled={false}
      isInvalid={false}
      label="Terra.timeInput.minutes"
      maxLength="2"
      name="terra-time-minute-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      showIsInvalid={false}
      size="2"
      type="text"
      value=""
    />
  </div>
  <div
    aria-hidden={true}
    className="format-text"
  >
    Terra.timeInput.maskHourMinute
  </div>
  <VisuallyHiddenText
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="all"
    refCallback={[Function]}
  />
</div>
`;

exports[`should render a time input with onChange 1`] = `
<div
  className="time-input-container"
>
  <div
    aria-label="Terra.timeInput.a11yLabelDefault"
    className="time-input"
    role="group"
  >
    <AccessibleValue
      readThis="Terra.timeInput.labeledTextValue"
    />
    <input
      name="time-input"
      type="hidden"
      value=""
    />
    <AccessibleInput
      ariaDescribedBy={null}
      className="time-input-hour"
      description="Terra.timeInput.hourDescriptionTwentyFour, Terra.timePicker.hotKey"
      disabled={false}
      isInvalid={false}
      label="Terra.timeInput.hourLabel"
      maxLength="2"
      name="terra-time-hour-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      showIsInvalid={false}
      size="2"
      type="text"
      value=""
    />
    <InjectIntl(TimeSpacer)
      className="time-spacer"
    />
    <AccessibleInput
      ariaDescribedBy={null}
      className="time-input-minute"
      description="Terra.timeInput.descriptionMinute, Terra.timePicker.hotKey"
      disabled={false}
      isInvalid={false}
      label="Terra.timeInput.minutes"
      maxLength="2"
      name="terra-time-minute-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      showIsInvalid={false}
      size="2"
      type="text"
      value=""
    />
  </div>
  <div
    aria-hidden={true}
    className="format-text"
  >
    Terra.timeInput.maskHourMinute
  </div>
  <VisuallyHiddenText
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="all"
    refCallback={[Function]}
  />
</div>
`;

exports[`should render a time input with onFocus 1`] = `
<div
  className="time-input-container"
>
  <div
    aria-label="Terra.timeInput.a11yLabelDefault"
    className="time-input"
    role="group"
  >
    <AccessibleValue
      readThis="Terra.timeInput.labeledTextValue"
    />
    <input
      name="time-input"
      type="hidden"
      value=""
    />
    <AccessibleInput
      ariaDescribedBy={null}
      className="time-input-hour"
      description="Terra.timeInput.hourDescriptionTwentyFour, Terra.timePicker.hotKey"
      disabled={false}
      isInvalid={false}
      label="Terra.timeInput.hourLabel"
      maxLength="2"
      name="terra-time-hour-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      showIsInvalid={false}
      size="2"
      type="text"
      value=""
    />
    <InjectIntl(TimeSpacer)
      className="time-spacer"
    />
    <AccessibleInput
      ariaDescribedBy={null}
      className="time-input-minute"
      description="Terra.timeInput.descriptionMinute, Terra.timePicker.hotKey"
      disabled={false}
      isInvalid={false}
      label="Terra.timeInput.minutes"
      maxLength="2"
      name="terra-time-minute-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      showIsInvalid={false}
      size="2"
      type="text"
      value=""
    />
  </div>
  <div
    aria-hidden={true}
    className="format-text"
  >
    Terra.timeInput.maskHourMinute
  </div>
  <VisuallyHiddenText
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="all"
    refCallback={[Function]}
  />
</div>
`;

exports[`should render a time input with seconds input 1`] = `
<div
  className="time-input-container"
>
  <div
    aria-label="Terra.timeInput.a11yLabelDefault"
    className="time-input"
    role="group"
  >
    <AccessibleValue
      readThis="Terra.timeInput.labeledTextValue"
    />
    <input
      name="time-input"
      type="hidden"
      value=""
    />
    <AccessibleInput
      ariaDescribedBy={null}
      className="time-input-hour with-second"
      description="Terra.timeInput.hourDescriptionTwentyFour, Terra.timePicker.hotKey"
      disabled={false}
      isInvalid={false}
      label="Terra.timeInput.hourLabel"
      maxLength="2"
      name="terra-time-hour-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      showIsInvalid={false}
      size="2"
      type="text"
      value=""
    />
    <InjectIntl(TimeSpacer)
      className="time-spacer"
    />
    <AccessibleInput
      ariaDescribedBy={null}
      className="time-input-minute with-second"
      description="Terra.timeInput.descriptionMinute, Terra.timePicker.hotKey"
      disabled={false}
      isInvalid={false}
      label="Terra.timeInput.minutes"
      maxLength="2"
      name="terra-time-minute-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      showIsInvalid={false}
      size="2"
      type="text"
      value=""
    />
    <InjectIntl(TimeSpacer)
      className="time-spacer"
    />
    <AccessibleInput
      ariaDescribedBy={null}
      className="time-input-second"
      description="Terra.timeInput.descriptionSecond, Terra.timePicker.hotKey"
      disabled={false}
      isInvalid={false}
      label="Terra.timeInput.seconds"
      maxLength="2"
      name="terra-time-second-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      showIsInvalid={false}
      size="2"
      type="text"
      value=""
    />
  </div>
  <div
    aria-hidden={true}
    className="format-text"
  >
    Terra.timeInput.maskHourMinuteSecond
  </div>
  <VisuallyHiddenText
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="all"
    refCallback={[Function]}
  />
</div>
`;

exports[`should render a time input with seconds input and a value 1`] = `
<div
  className="time-input-container"
>
  <div
    aria-label="Terra.timeInput.a11yLabelDefault"
    className="time-input"
    role="group"
  >
    <AccessibleValue
      readThis="Terra.timeInput.labeledTextValue"
      value="Terra.timeInput.textValueTwentyFourHourMinuteSecond"
    />
    <input
      name="time-input"
      type="hidden"
      value="T12:12:12"
    />
    <AccessibleInput
      ariaDescribedBy={null}
      className="time-input-hour with-second"
      description="Terra.timeInput.hourDescriptionTwentyFour, Terra.timePicker.hotKey"
      disabled={false}
      isInvalid={false}
      label="Terra.timeInput.hourLabel"
      maxLength="2"
      name="terra-time-hour-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      showIsInvalid={false}
      size="2"
      type="text"
      value="12"
    />
    <InjectIntl(TimeSpacer)
      className="time-spacer"
    />
    <AccessibleInput
      ariaDescribedBy={null}
      className="time-input-minute with-second"
      description="Terra.timeInput.descriptionMinute, Terra.timePicker.hotKey"
      disabled={false}
      isInvalid={false}
      label="Terra.timeInput.minutes"
      maxLength="2"
      name="terra-time-minute-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      showIsInvalid={false}
      size="2"
      type="text"
      value="12"
    />
    <InjectIntl(TimeSpacer)
      className="time-spacer"
    />
    <AccessibleInput
      ariaDescribedBy={null}
      className="time-input-second"
      description="Terra.timeInput.descriptionSecond, Terra.timePicker.hotKey"
      disabled={false}
      isInvalid={false}
      label="Terra.timeInput.seconds"
      maxLength="2"
      name="terra-time-second-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      showIsInvalid={false}
      size="2"
      type="text"
      value="12"
    />
  </div>
  <div
    aria-hidden={true}
    className="format-text"
  >
    Terra.timeInput.maskHourMinuteSecond
  </div>
  <VisuallyHiddenText
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="all"
    refCallback={[Function]}
  />
</div>
`;

exports[`should render a time input with seconds input and custom attributes 1`] = `
<div
  className="time-input-container"
>
  <div
    aria-label="Terra.timeInput.a11yLabelDefault"
    className="time-input"
    role="group"
  >
    <AccessibleValue
      readThis="Terra.timeInput.labeledTextValue"
    />
    <input
      name="time-input"
      type="hidden"
      value=""
    />
    <AccessibleInput
      ariaDescribedBy={null}
      className="time-input-hour with-second"
      description="Terra.timeInput.hourDescriptionTwentyFour, Terra.timePicker.hotKey"
      disabled={false}
      id="terra-time-input"
      isInvalid={false}
      label="Terra.timeInput.hourLabel"
      maxLength="2"
      name="terra-time-hour-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      showIsInvalid={false}
      size="2"
      type="text"
      value=""
    />
    <InjectIntl(TimeSpacer)
      className="time-spacer"
    />
    <AccessibleInput
      ariaDescribedBy={null}
      className="time-input-minute with-second"
      description="Terra.timeInput.descriptionMinute, Terra.timePicker.hotKey"
      disabled={false}
      id="terra-time-input"
      isInvalid={false}
      label="Terra.timeInput.minutes"
      maxLength="2"
      name="terra-time-minute-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      showIsInvalid={false}
      size="2"
      type="text"
      value=""
    />
    <InjectIntl(TimeSpacer)
      className="time-spacer"
    />
    <AccessibleInput
      ariaDescribedBy={null}
      className="time-input-second"
      description="Terra.timeInput.descriptionSecond, Terra.timePicker.hotKey"
      disabled={false}
      id="id-0"
      isInvalid={false}
      label="Terra.timeInput.seconds"
      maxLength="2"
      name="terra-time-second-time-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      pattern="\\\\d*"
      refCallback={[Function]}
      required={false}
      showIsInvalid={false}
      size="2"
      type="text"
      value=""
    />
  </div>
  <div
    aria-hidden={true}
    className="format-text"
  >
    Terra.timeInput.maskHourMinuteSecond
  </div>
  <VisuallyHiddenText
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="all"
    refCallback={[Function]}
  />
</div>
`;

exports[`should set the labels with the correct htmlFor a 24 hour timepicker properly on mobile devices 1`] = `
<div
  class="time-input-container"
>
  <div
    aria-label="Terra.timeInput.a11yLabelDefault"
    class="time-input"
    role="group"
  >
    <span
      aria-hidden="true"
      class="visually-hidden-text"
    >
      Terra.timeInput.labeledTextValue
    </span>
    <input
      name="time-input"
      type="hidden"
      value=""
    />
    <input
      aria-describedby="00000000-0000-0000-0000-000000000000-description"
      aria-disabled="false"
      aria-invalid="false"
      aria-label=" Terra.timeInput.hourLabel"
      class="form-input time-input-hour"
      id="id-2"
      maxlength="2"
      name="terra-time-hour-time-input"
      pattern="\\\\d*"
      size="2"
      type="text"
      value=""
    />
    <span
      aria-live="off"
      class="visually-hidden-text"
      id="00000000-0000-0000-0000-000000000000-description"
    >
      Terra.timeInput.hourDescriptionTwentyFour, Terra.timePicker.hotKey
    </span>
    <span
      aria-hidden="true"
      class="time-spacer"
    >
      Terra.timeInput.timeSpacer
    </span>
    <input
      aria-describedby="00000000-0000-0000-0000-000000000000-description"
      aria-disabled="false"
      aria-invalid="false"
      aria-label=" Terra.timeInput.minutes"
      class="form-input time-input-minute"
      id="id-1"
      maxlength="2"
      name="terra-time-minute-time-input"
      pattern="\\\\d*"
      size="2"
      type="text"
      value=""
    />
    <span
      aria-live="off"
      class="visually-hidden-text"
      id="00000000-0000-0000-0000-000000000000-description"
    >
      Terra.timeInput.descriptionMinute, Terra.timePicker.hotKey
    </span>
  </div>
  <div
    aria-hidden="true"
    class="format-text"
  >
    Terra.timeInput.maskHourMinute
  </div>
  <span
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="all"
    class="visually-hidden-text"
  />
</div>
`;

exports[`should set the labels with the correct htmlFor a 24 hour timepicker properly on mobile devices 2`] = `
<div
  class="time-input-container"
>
  <div
    aria-label="Terra.timeInput.a11yLabelDefault"
    class="time-input"
    role="group"
  >
    <span
      aria-hidden="true"
      class="visually-hidden-text"
    >
      Terra.timeInput.labeledTextValue
    </span>
    <input
      name="time-input"
      type="hidden"
      value=""
    />
    <input
      aria-describedby="00000000-0000-0000-0000-000000000000-description"
      aria-disabled="false"
      aria-invalid="false"
      aria-label=" Terra.timeInput.hourLabel"
      class="form-input time-input-hour with-second"
      id="id-2"
      maxlength="2"
      name="terra-time-hour-time-input"
      pattern="\\\\d*"
      size="2"
      type="text"
      value=""
    />
    <span
      aria-live="off"
      class="visually-hidden-text"
      id="00000000-0000-0000-0000-000000000000-description"
    >
      Terra.timeInput.hourDescriptionTwentyFour, Terra.timePicker.hotKey
    </span>
    <span
      aria-hidden="true"
      class="time-spacer"
    >
      Terra.timeInput.timeSpacer
    </span>
    <input
      aria-describedby="00000000-0000-0000-0000-000000000000-description"
      aria-disabled="false"
      aria-invalid="false"
      aria-label=" Terra.timeInput.minutes"
      class="form-input time-input-minute with-second"
      id="id-1"
      maxlength="2"
      name="terra-time-minute-time-input"
      pattern="\\\\d*"
      size="2"
      type="text"
      value=""
    />
    <span
      aria-live="off"
      class="visually-hidden-text"
      id="00000000-0000-0000-0000-000000000000-description"
    >
      Terra.timeInput.descriptionMinute, Terra.timePicker.hotKey
    </span>
    <span
      aria-hidden="true"
      class="time-spacer"
    >
      Terra.timeInput.timeSpacer
    </span>
    <input
      aria-describedby="00000000-0000-0000-0000-000000000000-description"
      aria-disabled="false"
      aria-invalid="false"
      aria-label=" Terra.timeInput.seconds"
      class="form-input time-input-second"
      id="id-0"
      maxlength="2"
      name="terra-time-second-time-input"
      pattern="\\\\d*"
      size="2"
      type="text"
      value=""
    />
    <span
      aria-live="off"
      class="visually-hidden-text"
      id="00000000-0000-0000-0000-000000000000-description"
    >
      Terra.timeInput.descriptionSecond, Terra.timePicker.hotKey
    </span>
  </div>
  <div
    aria-hidden="true"
    class="format-text"
  >
    Terra.timeInput.maskHourMinuteSecond
  </div>
  <span
    aria-atomic="true"
    aria-live="assertive"
    aria-relevant="all"
    class="visually-hidden-text"
  />
</div>
`;
